# LAIA

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_events.py
evals/: MODEL_BAKEOFF.md
evals/harness/: run.py
evals/results/: .gitignore
evals/utterances/: full_suite.json  phase3_create_search.json
postman/: LAIA.postman_collection.json
scripts/: entrypoint.sh  laia_chat.py
src/laia/: __init__.py  config.py  db.py  logging_config.py  main.py
src/laia/api/: assistant.py  auth.py  events.py  health.py
src/laia/models/: __init__.py  event.py
src/laia/orchestrator/: pipeline.py  prompts.py
src/laia/schemas/: __init__.py  assistant.py  events.py  single_call.py
src/laia/services/: calendar.py  conversation.py  dates.py  ollama.py
tests/: conftest.py  fakes.py  test_assistant_api.py  test_conversation.py  test_dates.py  test_event_labels.py  test_events_api.py  test_ollama.py  test_orchestrator.py  test_update_bounds.py
