[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laia"
version = "0.1.0"
description = "Local AI Assistant — calendar MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"evals/**" = ["E501"]
"tests/**" = ["E501"]
"src/laia/orchestrator/pipeline.py" = ["E501"]
"src/laia/api/events.py" = ["E501"]
"src/laia/orchestrator/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["laia"]
mypy_path = "src"
